version: "dev"

opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/coq-of-ocaml"
dev-repo: "git+https://github.com/clarus/coq-of-ocaml.git"
bug-reports: "https://github.com/clarus/coq-of-ocaml/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["sh" "-c" "cd OCaml && ./configure.sh"] {coq:installed}
  [make "-C" "OCaml" "-j%{jobs}%"] {coq:installed}
  ["dune" "build" "-p" name "-j" jobs]
  [make "test"] {with-test}
]
install: [
  [make "-C" "OCaml" "install"] {coq:installed}
]
depends: [
  "conf-ruby" {with-test}
  "csexp" {>= "1.2.3"}
  "dune" {>= "2.0"}
  "ocaml" {>= "4.08" & < "4.10"}
  "ocamlfind" {>= "1.5.2"}
  "result" {>= "1.5"}
  "smart-print"
  "yojson" {>= "1.6.0"}
]
depopts: [
  "coq"
]
conflicts: [
  "coq" {< "8.11"}
]
tags: [
  "keyword:compilation"
  "keyword:ocaml"
  "logpath:OCaml"
]
synopsis: "Compile a subset of OCaml to Coq"
