version: "dev"

opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/formal-land/coq-of-ocaml"
dev-repo: "git+https://github.com/formal-land/coq-of-ocaml.git"
bug-reports: "https://github.com/formal-land/coq-of-ocaml/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["sh" "-c" "cd proofs && ./configure.sh"] {coq:installed}
  [make "-C" "proofs" "-j%{jobs}%"] {coq:installed}
  ["dune" "build" "-p" name "-j" jobs]
  [make "test"] {with-test}
]
install: [
  [make "-C" "proofs" "install"] {coq:installed}
]
depends: [
  "bisect_ppx" {dev & >= "2.5.0"}
  "conf-ruby" {with-test}
  "csexp"
  "dune" {>= "2.9"}
  "menhir" {dev}
  "ocaml" {>= "4.13" & < "4.14"}
  "ocamlfind" {>= "1.5.2"}
  "result"
  "smart-print"
  "yojson" {>= "1.6.0"}
  "angstrom"
]
depopts: [
  "coq"
]
conflicts: [
  "coq" {< "8.11"}
]
tags: [
  "keyword:compilation"
  "keyword:OCaml"
  "logpath:CoqOfOCaml"
]
synopsis: "Compile a subset of OCaml to Coq"
