(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1

let ver =
  Scanf.sscanf J.ocaml_version "%s@.%s@." (fun maj min -> maj ^ min)
;;

Printf.ksprintf J.send {|
; We support too many versions of OCaml to handle the following properly:
;
;     Error (warning 3): deprecated: Stdlib.String.capitalize
;
(env
 (dev     (flags :standard -w -3))
 (release (flags :standard -w -3)))

(copy_files# %s/*.mll)
(copy_files %s/*.mly)
(copy_files# %s/lexer_raw.mli)

(rule
 (targets
   parser_raw.ml parser_raw.mli
   parser_explain.ml parser_printer.ml parser_recover.ml)
 (action
   (progn
     (copy %s/parser_raw.ml     parser_raw.ml)
     (copy %s/parser_raw.mli    parser_raw.mli)
     (copy %s/parser_explain.ml parser_explain.ml)
     (copy %s/parser_printer.ml parser_printer.ml)
     (copy %s/parser_recover.ml parser_recover.ml))))

(ocamllex lexer_ident lexer_raw)

(library
  (name preprocess)
  (wrapped false)
  (libraries parsing utils merlin_utils))
|} ver ver ver ver ver ver ver ver
