(ocamllex lexer_ident lexer_raw)

(library
  (name preprocess)
  (wrapped false)
  (flags -open Merlin_utils)
  (libraries parsing utils merlin_utils))

(rule
 (targets menhirLib.ml menhirLib.mli)
 (mode promote)
 (action
  (progn
   (copy %{lib:menhirLib:menhirLib.ml}  menhirLib.ml)
   (copy %{lib:menhirLib:menhirLib.mli} menhirLib.mli))))
